june/src/parser/tests/snapshots/june__parser__tests__ind__non_universe_return_type.snap
---
source: june/src/parser/tests/ind.rs
expression: err
---
Some(
    Ident(
        Ident {
            value: "illegal",
            start: ByteIndex(
                76,
            ),
        },
    ),
)
